[ui-dashboard] login,register,forget-page requests

--- a/bookinside/app/src/main/res/values/strings.xml
+++ b/bookinside/app/src/main/res/values/strings.xml
@@ -2,10 +2,10 @@
     <string name="app_name">BookInside</string>
     <string name="action_settings">Settings</string>
     <!-- Strings used for fragments for navigation -->
-    <string name="login_fragment_label">First Fragment</string>
-    <string name="register_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
+    <string name="login_fragment_label">Login Fragment</string>
+    <string name="register_fragment_label">Register Fragment</string>
+    <string name="forget_pass_fragment">Forget Pass Fragment</string>
+    <string name="dashboard_fragment">Dashboard Fragment</string>
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
@@ -26,13 +26,13 @@
     <string name="have_account_button">Log in</string>
     <string name="toggle_show_password">SHOW</string>
 
-    <string name="hello_blank_fragment">forget pass</string>
     <string name="iv_lock_pass">lock</string>
     <string name="tv_forget_pass">Forgot Password?</string>
     <string name="tv_subheader_forget_pass">"Confirm your Registered Email and we'll send the instructions."</string>
     <string name="et_email_forget_pass">"Enter your email"</string>
     <string name="reset_pass_button">"Reset Password"</string>
 
-
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
