added locations list for a book and people list for that location

--- a/bookinside/app/src/main/res/values/strings.xml
+++ b/bookinside/app/src/main/res/values/strings.xml
@@ -52,6 +52,6 @@
     <string name="title">*title</string>
     <string name="bookAuthor">Author</string>
     <string name="bookTitle">Title</string>
-    <string name="bookDescription">O scurta si ingenioasa descriere a cartii pe care o vom lua din baza de date, sper</string>
+    <string name="bookDescription">O scurta si ingenioasa descriere a cartii pe care o vom lua din baza de date, sper hhhhhhhhhhhhhhhhhhhhhhgggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggghhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh</string>
 
 </resources>
