[ui-searchbook] add searchbook design

--- a/bookinside/app/src/main/res/values/strings.xml
+++ b/bookinside/app/src/main/res/values/strings.xml
@@ -60,4 +60,6 @@
         <item>@drawable/go</item>
     </string-array>
 
+    <string name="main_no_items">No books to display</string>
+
 </resources>
