--- a/bookinside/app/src/main/res/values/strings.xml
+++ b/bookinside/app/src/main/res/values/strings.xml
@@ -62,5 +62,8 @@
 
     <string name="main_no_items">No books to display</string>
     <string name="back_from_book_page" />
+    <string name="user_username">Username</string>
+    <string name="user_email">name.surname@mail.mail</string>
+    <string name="back_from_user_page" />
 
 </resources>
